--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "firebase": "^9.6.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.25.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
