--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "sweetalert": "^2.1.2",
+    "tw-elements": "^1.0.0-alpha9",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
