--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.1",
     "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
     "@testing-library/jest-dom": "^5.14.1",
@@ -15,6 +16,7 @@
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-spinners": "^0.11.0",
     "sweetalert": "^2.1.2",
     "tw-elements": "^1.0.0-alpha9",
     "web-vitals": "^2.1.0"
