--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "async": ">=2.6.4",
+	"ejs": ">=3.1.7",
     "firebase": "^9.6.4",
     "nth-check": ">=2.0.1",
     "react": "^17.0.2",
