--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "@testing-library/user-event": "^13.2.1",
     "async": ">=2.6.4",
 	"ejs": ">=3.1.7",
+	"protobufjs": ">=6.11.3",
+	"nth-check": ">=2.0.1",
     "firebase": "^9.6.4",
-    "nth-check": ">=2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.25.1",
