--- a/package.json
+++ b/package.json
@@ -12,14 +12,12 @@
     "async": ">=2.6.4",
 	"ejs": ">=3.1.7",
 	"protobufjs": ">=6.11.3",
-	"nth-check": ">=2.0.1",
     "firebase": "^9.6.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.25.1",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
     "react-spinners": "^0.11.0",
     "sweetalert": "^2.1.2",
     "tw-elements": "^1.0.0-alpha9",
@@ -52,6 +50,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.16"
+    "tailwindcss": "^3.0.16",
+	"react-scripts": "^5.0.1"
   }
 }
