--- a/package.json
+++ b/package.json
@@ -1,56 +1,27 @@
 {
-  "name": "dream-trip-client",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@headlessui/react": "^1.4.3",
-    "@heroicons/react": "^1.0.5",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "async": ">=2.6.4",
-	"ejs": ">=3.1.7",
-	"protobufjs": ">=6.11.3",
-    "firebase": "^9.6.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-hook-form": "^7.25.1",
-    "react-rating": "^2.0.5",
-    "react-router-dom": "^6.2.1",
-    "react-spinners": "^0.11.0",
-    "sweetalert": "^2.1.2",
-    "tw-elements": "^1.0.0-alpha9",
-    "web-vitals": "^2.1.0"
-  },
+  "name": "dreamTrip",
+  "version": "1.0.0",
+  "description": "Dream Trip App",
+  "main": "server.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node backend/server.js",
+    "server": "node backend/server.js",
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\" ",
+    "start-dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "keywords": [],
+  "author": "Rxdevs",
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
+    "express": "^4.18.1",
+    "mongoose": "^6.6.2"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.16",
-	"react-scripts": "^5.0.1"
+    "concurrently": "^7.4.0",
+    "nodemon": "^2.0.20"
   }
 }
