--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dream-trip-client",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,8 +10,8 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "async": ">=2.6.4",
-	"ejs": ">=3.1.7",
-	"protobufjs": ">=6.11.3",
+    "ejs": ">=3.1.7",
+    "protobufjs": ">=6.11.3",
     "firebase": "^9.6.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -51,6 +51,6 @@
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.16",
-	"react-scripts": "^5.0.1"
+	  "react-scripts": "^5.0.1"
   }
 }
