--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dreamTrip",
+  "name": "dream-trip",
   "version": "1.0.0",
   "description": "Dream Trip App",
   "main": "server.js",
