--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "react-spinners": "^0.13.4",
     "sweetalert": "^2.1.2",
     "tw-elements": "^1.0.0-alpha9",
-    "web-vitals": "^3.0.2"
+    "web-vitals": "^3.0.2",
+	"nth-check": ">=2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,7 +50,6 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
-    "nth-check": ">=2.1.1",
     "postcss": "^8.4.17",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.1.8"
