--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.36.1",
+    "react-icons": "^4.4.0",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.4.1",
     "react-spinners": "^0.13.4",
