--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "node backend/server.js",
     "server": "node backend/server.js",
     "client": "npm start --prefix frontend",
-    "dev": "concurrently \"npm run server\" \"npm run client\" ",
-    "start-dev": "nodemon server.js",
+    "dev": "concurrently \"npm run start\" \"npm run client\" ",
+    "start-dev": "nodemon backend/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
