--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.4.1",
     "react-spinners": "^0.13.4",
+    "react-toastify": "^9.0.8",
     "sweetalert": "^2.1.2",
     "tw-elements": "^1.0.0-alpha9",
     "web-vitals": "^3.0.2"
