--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,7 @@
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.17",
     "react-scripts": "^5.0.1",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+	"minimatch": ">=3.0.5"
   }
 }
