--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "async": ">=3.2.4",
+    "dream-trip": "file:..",
     "ejs": ">=3.1.8",
     "firebase": "^9.10.0",
     "nth-check": ">=2.1.1",
@@ -52,9 +53,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
+    "minimatch": ">=3.0.5",
     "postcss": "^8.4.17",
     "react-scripts": "^5.0.1",
-    "tailwindcss": "^3.1.8",
-	"minimatch": ">=3.0.5"
+    "tailwindcss": "^3.1.8"
   }
 }
