--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
-    "async": ">=3.2.4",
-    "dream-trip": "file:..",
-    "ejs": ">=3.1.8",
     "firebase": "^9.10.0",
-    "nth-check": ">=2.1.1",
-    "protobufjs": ">=7.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.36.1",
@@ -56,6 +51,10 @@
     "minimatch": ">=3.0.5",
     "postcss": "^8.4.17",
     "react-scripts": "^5.0.1",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "async": ">=3.2.4",
+    "ejs": ">=3.1.8",
+    "nth-check": ">=2.1.1",
+    "protobufjs": ">=7.1.2"
   }
 }
