--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "firebase": "^9.10.0",
+    "gsap": "^3.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.36.1",
     "react-icons": "^4.4.0",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.4.1",
+    "react-scroll-parallax": "^3.3.1",
     "react-spinners": "^0.13.4",
     "react-toastify": "^9.0.8",
     "sweetalert": "^2.1.2",
@@ -47,14 +49,14 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.12",
-    "minimatch": ">=3.0.5",
-    "postcss": "^8.4.17",
-    "react-scripts": "^5.0.1",
-    "tailwindcss": "^3.1.8",
     "async": ">=3.2.4",
+    "autoprefixer": "^10.4.12",
     "ejs": ">=3.1.8",
+    "minimatch": ">=3.0.5",
     "nth-check": ">=2.1.1",
-    "protobufjs": ">=7.1.2"
+    "postcss": "^8.4.17",
+    "protobufjs": ">=7.1.2",
+    "react-scripts": "^5.0.1",
+    "tailwindcss": "^3.1.8"
   }
 }
