--- a/package.json
+++ b/package.json
@@ -1,62 +1,37 @@
 {
   "name": "frontend",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@headlessui/react": "^1.7.3",
-    "@heroicons/react": "^1.0.6",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
-    "firebase": "^9.10.0",
-    "gsap": "^3.11.3",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@headlessui/react": "^1.7.4",
+    "@mui/icons-material": "^5.10.14",
+    "@mui/material": "^5.10.14",
+    "firebase": "^9.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.36.1",
-    "react-icons": "^4.4.0",
-    "react-rating": "^2.0.5",
-    "react-router-dom": "^6.4.1",
-    "react-scroll-parallax": "^3.3.1",
-    "react-spinners": "^0.13.4",
-    "react-toastify": "^9.0.8",
-    "sweetalert": "^2.1.2",
-    "tw-elements": "^1.0.0-alpha9",
-    "web-vitals": "^3.0.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "react-hook-form": "^7.39.5",
+    "react-icons": "^4.6.0",
+    "react-router-dom": "^6.4.3",
+    "react-scroll-parallax": "^3.3.2",
+    "react-toastify": "^9.1.1",
+    "sweetalert2": "^11.6.10",
+    "sweetalert2-react-content": "^5.0.7"
   },
   "devDependencies": {
-    "async": ">=3.2.4",
-    "autoprefixer": "^10.4.12",
-    "ejs": ">=3.1.8",
-    "minimatch": ">=3.0.5",
-    "nth-check": ">=2.1.1",
-    "postcss": "^8.4.17",
-    "protobufjs": ">=7.1.2",
-    "react-scripts": "^5.0.1",
-    "tailwindcss": "^3.1.8"
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8",
+    "@vitejs/plugin-react": "^2.2.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4",
+    "vite": "^3.2.3"
   }
 }
