--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-router-dom": "^6.4.3",
     "react-scroll-parallax": "^3.3.2",
     "react-toastify": "^9.1.1",
-    "sweetalert2": "^11.6.10",
+    "sweetalert2": "11.6.13",
     "sweetalert2-react-content": "^5.0.7"
   },
   "devDependencies": {
