--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "frontend",
-  "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "license": "true",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -14,7 +13,11 @@
     "@headlessui/react": "^1.7.4",
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
+    "@tanstack/react-query": "^4.19.1",
+    "@tanstack/react-query-devtools": "^4.19.1",
+    "axios": "^1.2.1",
     "firebase": "^9.14.0",
+    "html-react-parser": "^3.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.5",
@@ -34,5 +37,7 @@
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
     "vite": "^3.2.3"
-  }
+  },
+  "private": true,
+  "type": "module"
 }
