--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ node_modules
 dist
 dist-ssr
 *.local
+/.firebase 
 
 # Editor directories and files
 .vscode/*
@@ -37,3 +38,6 @@ dist-ssr
 .env.test.local
 .env.production.local
 
+
+# Local Netlify folder
+.netlify
