--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.4.3",
     "react-scroll-parallax": "^3.3.2",
-    "react-toastify": "^9.1.1",
-    "sweetalert2": "11.6.13",
-    "sweetalert2-react-content": "^5.0.7"
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
