--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.4",
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
+    "@remixicon/react": "^4.2.0",
     "@tanstack/react-query": "^4.19.1",
     "@tanstack/react-query-devtools": "^4.19.1",
     "axios": "^1.2.1",
