--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dreamtrip-frontend",
   "version": "0.0.0",
   "license": "true",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -33,18 +34,18 @@
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.13",
+    "autoprefixer": "^10.4.19",
     "cz-conventional-changelog": "^3.3.0",
+    "daisyui": "^4.9.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.1",
     "vite": "^5.2.7"
   },
   "private": true,
-  "type": "module",
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
